[POC] Added testing code and xvfb support

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -20,7 +20,10 @@ RUN apt install -y\
     libxinerama-dev\
     libxcursor-dev\
     libxi-dev\
-    xvfb
+    xvfb\
+    vim\
+    python3\
+    python3-pip
 
 RUN mkdir -p /src
 
@@ -31,4 +34,28 @@ WORKDIR /src/renderdoc
 RUN git checkout v1.18 && mkdir -p /src/renderdoc/build
 
 WORKDIR /src/renderdoc/build
-RUN cmake ../ && make
+RUN cmake ../ && make -j4
+
+
+# Clone and build the test framework (graphics implementation)
+WORKDIR /src
+run git clone https://github.com/beuss-git/prog2002_test_poc test
+
+WORKDIR /src/test
+run git submodule update --init --recursive && mkdir -p /src/test/build
+
+WORKDIR /src/test/build
+run cmake ../ && make -j4
+
+# Clone and build the tester (python code)
+WORKDIR /src
+run git clone https://github.com/beuss-git/prog2002_renderdoc_tester tester
+
+# Export and enable xvfb display
+run chmod +x /src/tester/init_xvfb.sh
+ARG RESOLUTION="1024x1024x24"
+ENV XVFB_RES="${RESOLUTION}"
+ARG XARGS=""
+ENV XVFB_ARGS="${XARGS}"
+ENV DISPLAY=":99"
+ENTRYPOINT ["/bin/sh", "/src/tester/init_xvfb.sh"]
