--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tclap"]
 	path = external/tclap
 	url = https://git.code.sf.net/p/tclap/code
+[submodule "glfw"]
+	path = external/glfw
+	url = https://github.com/glfw/glfw.git
