--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,8 @@ add_subdirectory(external/tclap)
 set(TCLAP_INCLUDE_PATH "${CMAKE_CURRENT_LIST_DIR}/external/tclap/include")
 find_package(TCLAP REQUIRED)
 
+# Add Lab 00
+add_subdirectory(Labs/Lab00)
+
 # Add Lab 01
 add_subdirectory(Labs/Lab01)
