Add tester as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glfw"]
 	path = external/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "tester"]
+	path = external/tester
+	url = https://github.com/beuss-git/prog2002_test_poc.git
