LabXX: Add glfw, glad, glm and opengl to CMakeLists.txt

--- a/Labs/LabXX/CMakeLists.txt
+++ b/Labs/LabXX/CMakeLists.txt
@@ -5,6 +5,11 @@ project(LabXX)
 
 add_executable(${PROJECT_NAME} src/main.cpp src/labxx.cpp src/labxx.hpp)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${TCLAP_INCLUDE_DIR} ${TESTER_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE 
+	${TCLAP_INCLUDE_DIR}
+	${TESTER_INCLUDE_DIR}
+	${GLFW_INCLUDE_DIR}
+	${GLAD_INCLUDE_DIR}
+)
 
-target_link_libraries(${PROJECT_NAME} TESTER)
+target_link_libraries(${PROJECT_NAME} TESTER glfw glad glm OpenGL::GL)
