--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,12 @@
 [submodule "glfw"]
 	path = external/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "glad"]
+	path = external/glad
+	url = https://github.com/Dav1dde/glad
+[submodule "glm"]
+	path = external/glm
+	url = https://github.com/g-truc/glm.git
 [submodule "tester"]
 	path = external/tester
 	url = https://git.gvk.idi.ntnu.no/course/prog2002/continuous-integration/testing.git
